parser.output
   0  $accept : %entry% $end

   1  program : PROGRAM opt_rec_list opt_dec_list opt_proc_list cmd EOF

   2  opt_rec_list :
   3               | rec_list

   4  rec_list : rec_
   5           | rec_ rec_list

   6  opt_dec_list :
   7               | dec_list

   8  dec_list : dec
   9           | dec dec_list

  10  rec_ : RECORD ide BEGIN dec_list END SEMICOLON

  11  dec : VAR ide COLON gType SEMICOLON

  12  gType : bType
  13        | ide
  14        | ARRAY LS NUM RS OF bType
  15        | ARRAY LS NUM COMMA NUM RS OF bType

  16  bType : INT
  17        | FLOAT

  18  opt_proc_list :
  19                | proc_list

  20  proc_list : proc
  21            | proc proc_list

  22  proc : PROCEDURE ide LP opt_param_list RP opt_dec_list cmd
  23       | FUNCTION ide LP opt_param_list RP COLON ret opt_dec_list cmd

  24  opt_param_list :
  25                 | param_list

  26  param_list : param
  27             | param COMMA param_list

  28  param : ide COLON bType

  29  ret : bType

  30  cmd : lexp ASSIGN aexp SEMICOLON
  31      | BEGIN opt_cmd_list END SEMICOLON
  32      | IF bexp THEN cmd ELSE cmd
  33      | WHILE bexp DO cmd
  34      | REPEAT cmd UNTIL bexp SEMICOLON
  35      | FOR ide ASSIGN aexp TO aexp DO cmd
  36      | WRITE aexp SEMICOLON
  37      | CALL ide LP opt_aexp_list RP SEMICOLON

  38  opt_cmd_list :
  39               | cmd_list

  40  cmd_list : cmd
  41           | cmd cmd_list

  42  lexp : ide
  43       | ide LS aexp RS
  44       | ide LS aexp COMMA aexp RS
  45       | ide DOT lexp

  46  bexp_factor : TRUE
  47              | FALSE
  48              | aexp EQUAL aexp
  49              | aexp LESSEQUAL aexp
  50              | aexp LESS aexp
  51              | aexp GREATEREQUAL aexp
  52              | aexp GREATER aexp
  53              | NOT bexp_factor
  54              | LP bexp RP

  55  bexp_term : bexp_term AND bexp_factor
  56            | bexp_factor

  57  bexp : bexp OR bexp_term
  58       | bexp_term

  59  aexp_factor : NUM
  60              | REAL
  61              | ide
  62              | ide LS aexp RS
  63              | ide LS aexp COMMA aexp RS
  64              | ide DOT ide
  65              | ide DOT ide LS aexp RS
  66              | ide DOT ide LS aexp COMMA aexp RS
  67              | CALL ide LP opt_aexp_list RP
  68              | LP aexp RP

  69  aexp_term : aexp_term TIMES aexp_factor
  70            | aexp_term DIVISION aexp_factor
  71            | aexp_factor

  72  aexp : aexp PLUS aexp_term
  73       | aexp MINUS aexp_term
  74       | aexp_term

  75  opt_aexp_list :
  76                | aexp_list

  77  aexp_list : aexp
  78            | aexp COMMA aexp_list

  79  ide : IDE

  80  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (80)

	PROGRAM  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : PROGRAM . opt_rec_list opt_dec_list opt_proc_list cmd EOF  (1)
	opt_rec_list : .  (2)

	RECORD  shift 5
	IDE  reduce 2
	VAR  reduce 2
	PROCEDURE  reduce 2
	FUNCTION  reduce 2
	BEGIN  reduce 2
	IF  reduce 2
	WHILE  reduce 2
	REPEAT  reduce 2
	FOR  reduce 2
	WRITE  reduce 2
	CALL  reduce 2

	opt_rec_list  goto 6
	rec_list  goto 7
	rec_  goto 8


state 4
	%entry% : '\001' program .  (80)

	.  reduce 80


state 5
	rec_ : RECORD . ide BEGIN dec_list END SEMICOLON  (10)

	IDE  shift 9
	.  error

	ide  goto 10


state 6
	program : PROGRAM opt_rec_list . opt_dec_list opt_proc_list cmd EOF  (1)
	opt_dec_list : .  (6)

	VAR  shift 11
	IDE  reduce 6
	PROCEDURE  reduce 6
	FUNCTION  reduce 6
	BEGIN  reduce 6
	IF  reduce 6
	WHILE  reduce 6
	REPEAT  reduce 6
	FOR  reduce 6
	WRITE  reduce 6
	CALL  reduce 6

	opt_dec_list  goto 12
	dec_list  goto 13
	dec  goto 14


state 7
	opt_rec_list : rec_list .  (3)

	.  reduce 3


state 8
	rec_list : rec_ .  (4)
	rec_list : rec_ . rec_list  (5)

	RECORD  shift 5
	IDE  reduce 4
	VAR  reduce 4
	PROCEDURE  reduce 4
	FUNCTION  reduce 4
	BEGIN  reduce 4
	IF  reduce 4
	WHILE  reduce 4
	REPEAT  reduce 4
	FOR  reduce 4
	WRITE  reduce 4
	CALL  reduce 4

	rec_list  goto 15
	rec_  goto 8


state 9
	ide : IDE .  (79)

	.  reduce 79


state 10
	rec_ : RECORD ide . BEGIN dec_list END SEMICOLON  (10)

	BEGIN  shift 16
	.  error


state 11
	dec : VAR . ide COLON gType SEMICOLON  (11)

	IDE  shift 9
	.  error

	ide  goto 17


state 12
	program : PROGRAM opt_rec_list opt_dec_list . opt_proc_list cmd EOF  (1)
	opt_proc_list : .  (18)

	PROCEDURE  shift 18
	FUNCTION  shift 19
	IDE  reduce 18
	BEGIN  reduce 18
	IF  reduce 18
	WHILE  reduce 18
	REPEAT  reduce 18
	FOR  reduce 18
	WRITE  reduce 18
	CALL  reduce 18

	opt_proc_list  goto 20
	proc_list  goto 21
	proc  goto 22


state 13
	opt_dec_list : dec_list .  (7)

	.  reduce 7


state 14
	dec_list : dec .  (8)
	dec_list : dec . dec_list  (9)

	VAR  shift 11
	IDE  reduce 8
	PROCEDURE  reduce 8
	FUNCTION  reduce 8
	BEGIN  reduce 8
	END  reduce 8
	IF  reduce 8
	WHILE  reduce 8
	REPEAT  reduce 8
	FOR  reduce 8
	WRITE  reduce 8
	CALL  reduce 8

	dec_list  goto 23
	dec  goto 14


state 15
	rec_list : rec_ rec_list .  (5)

	.  reduce 5


state 16
	rec_ : RECORD ide BEGIN . dec_list END SEMICOLON  (10)

	VAR  shift 11
	.  error

	dec_list  goto 24
	dec  goto 14


state 17
	dec : VAR ide . COLON gType SEMICOLON  (11)

	COLON  shift 25
	.  error


state 18
	proc : PROCEDURE . ide LP opt_param_list RP opt_dec_list cmd  (22)

	IDE  shift 9
	.  error

	ide  goto 26


state 19
	proc : FUNCTION . ide LP opt_param_list RP COLON ret opt_dec_list cmd  (23)

	IDE  shift 9
	.  error

	ide  goto 27


state 20
	program : PROGRAM opt_rec_list opt_dec_list opt_proc_list . cmd EOF  (1)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	.  error

	cmd  goto 35
	ide  goto 36
	lexp  goto 37


state 21
	opt_proc_list : proc_list .  (19)

	.  reduce 19


state 22
	proc_list : proc .  (20)
	proc_list : proc . proc_list  (21)

	PROCEDURE  shift 18
	FUNCTION  shift 19
	IDE  reduce 20
	BEGIN  reduce 20
	IF  reduce 20
	WHILE  reduce 20
	REPEAT  reduce 20
	FOR  reduce 20
	WRITE  reduce 20
	CALL  reduce 20

	proc_list  goto 38
	proc  goto 22


state 23
	dec_list : dec dec_list .  (9)

	.  reduce 9


state 24
	rec_ : RECORD ide BEGIN dec_list . END SEMICOLON  (10)

	END  shift 39
	.  error


state 25
	dec : VAR ide COLON . gType SEMICOLON  (11)

	IDE  shift 9
	ARRAY  shift 40
	INT  shift 41
	FLOAT  shift 42
	.  error

	ide  goto 43
	gType  goto 44
	bType  goto 45


state 26
	proc : PROCEDURE ide . LP opt_param_list RP opt_dec_list cmd  (22)

	LP  shift 46
	.  error


state 27
	proc : FUNCTION ide . LP opt_param_list RP COLON ret opt_dec_list cmd  (23)

	LP  shift 47
	.  error


state 28
	cmd : BEGIN . opt_cmd_list END SEMICOLON  (31)
	opt_cmd_list : .  (38)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	END  reduce 38

	cmd  goto 48
	ide  goto 36
	lexp  goto 37
	opt_cmd_list  goto 49
	cmd_list  goto 50


state 29
	cmd : IF . bexp THEN cmd ELSE cmd  (32)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp  goto 60
	bexp_factor  goto 61
	bexp_term  goto 62
	aexp_factor  goto 63
	aexp_term  goto 64


state 30
	cmd : WHILE . bexp DO cmd  (33)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp  goto 65
	bexp_factor  goto 61
	bexp_term  goto 62
	aexp_factor  goto 63
	aexp_term  goto 64


state 31
	cmd : REPEAT . cmd UNTIL bexp SEMICOLON  (34)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	.  error

	cmd  goto 66
	ide  goto 36
	lexp  goto 37


state 32
	cmd : FOR . ide ASSIGN aexp TO aexp DO cmd  (35)

	IDE  shift 9
	.  error

	ide  goto 67


state 33
	cmd : WRITE . aexp SEMICOLON  (36)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 69
	aexp_factor  goto 63
	aexp_term  goto 64


state 34
	cmd : CALL . ide LP opt_aexp_list RP SEMICOLON  (37)

	IDE  shift 9
	.  error

	ide  goto 70


state 35
	program : PROGRAM opt_rec_list opt_dec_list opt_proc_list cmd . EOF  (1)

	EOF  shift 71
	.  error


state 36
	lexp : ide .  (42)
	lexp : ide . LS aexp RS  (43)
	lexp : ide . LS aexp COMMA aexp RS  (44)
	lexp : ide . DOT lexp  (45)

	LS  shift 72
	DOT  shift 73
	ASSIGN  reduce 42


state 37
	cmd : lexp . ASSIGN aexp SEMICOLON  (30)

	ASSIGN  shift 74
	.  error


state 38
	proc_list : proc proc_list .  (21)

	.  reduce 21


state 39
	rec_ : RECORD ide BEGIN dec_list END . SEMICOLON  (10)

	SEMICOLON  shift 75
	.  error


state 40
	gType : ARRAY . LS NUM RS OF bType  (14)
	gType : ARRAY . LS NUM COMMA NUM RS OF bType  (15)

	LS  shift 76
	.  error


state 41
	bType : INT .  (16)

	.  reduce 16


state 42
	bType : FLOAT .  (17)

	.  reduce 17


state 43
	gType : ide .  (13)

	.  reduce 13


state 44
	dec : VAR ide COLON gType . SEMICOLON  (11)

	SEMICOLON  shift 77
	.  error


state 45
	gType : bType .  (12)

	.  reduce 12


state 46
	proc : PROCEDURE ide LP . opt_param_list RP opt_dec_list cmd  (22)
	opt_param_list : .  (24)

	IDE  shift 9
	RP  reduce 24

	ide  goto 78
	opt_param_list  goto 79
	param_list  goto 80
	param  goto 81


state 47
	proc : FUNCTION ide LP . opt_param_list RP COLON ret opt_dec_list cmd  (23)
	opt_param_list : .  (24)

	IDE  shift 9
	RP  reduce 24

	ide  goto 78
	opt_param_list  goto 82
	param_list  goto 80
	param  goto 81


state 48
	cmd_list : cmd .  (40)
	cmd_list : cmd . cmd_list  (41)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	END  reduce 40

	cmd  goto 48
	ide  goto 36
	lexp  goto 37
	cmd_list  goto 83


state 49
	cmd : BEGIN opt_cmd_list . END SEMICOLON  (31)

	END  shift 84
	.  error


state 50
	opt_cmd_list : cmd_list .  (39)

	.  reduce 39


state 51
	aexp_factor : NUM .  (59)

	.  reduce 59


state 52
	aexp_factor : REAL .  (60)

	.  reduce 60


state 53
	bexp_factor : TRUE .  (46)

	.  reduce 46


state 54
	bexp_factor : FALSE .  (47)

	.  reduce 47


state 55
	aexp_factor : CALL . ide LP opt_aexp_list RP  (67)

	IDE  shift 9
	.  error

	ide  goto 85


state 56
	bexp_factor : NOT . bexp_factor  (53)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp_factor  goto 86
	aexp_factor  goto 63
	aexp_term  goto 64


state 57
	bexp_factor : LP . bexp RP  (54)
	aexp_factor : LP . aexp RP  (68)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 87
	bexp  goto 88
	bexp_factor  goto 61
	bexp_term  goto 62
	aexp_factor  goto 63
	aexp_term  goto 64


state 58
	aexp_factor : ide .  (61)
	aexp_factor : ide . LS aexp RS  (62)
	aexp_factor : ide . LS aexp COMMA aexp RS  (63)
	aexp_factor : ide . DOT ide  (64)
	aexp_factor : ide . DOT ide LS aexp RS  (65)
	aexp_factor : ide . DOT ide LS aexp COMMA aexp RS  (66)

	LS  shift 89
	DOT  shift 90
	THEN  reduce 61
	DO  reduce 61
	TO  reduce 61
	PLUS  reduce 61
	MINUS  reduce 61
	TIMES  reduce 61
	DIVISION  reduce 61
	EQUAL  reduce 61
	LESSEQUAL  reduce 61
	LESS  reduce 61
	AND  reduce 61
	OR  reduce 61
	SEMICOLON  reduce 61
	COMMA  reduce 61
	RS  reduce 61
	RP  reduce 61
	GREATEREQUAL  reduce 61
	GREATER  reduce 61


state 59
	bexp_factor : aexp . EQUAL aexp  (48)
	bexp_factor : aexp . LESSEQUAL aexp  (49)
	bexp_factor : aexp . LESS aexp  (50)
	bexp_factor : aexp . GREATEREQUAL aexp  (51)
	bexp_factor : aexp . GREATER aexp  (52)
	aexp : aexp . PLUS aexp_term  (72)
	aexp : aexp . MINUS aexp_term  (73)

	PLUS  shift 91
	MINUS  shift 92
	EQUAL  shift 93
	LESSEQUAL  shift 94
	LESS  shift 95
	GREATEREQUAL  shift 96
	GREATER  shift 97
	.  error


state 60
	cmd : IF bexp . THEN cmd ELSE cmd  (32)
	bexp : bexp . OR bexp_term  (57)

	THEN  shift 98
	OR  shift 99
	.  error


state 61
	bexp_term : bexp_factor .  (56)

	.  reduce 56


state 62
	bexp_term : bexp_term . AND bexp_factor  (55)
	bexp : bexp_term .  (58)

	AND  shift 100
	THEN  reduce 58
	DO  reduce 58
	OR  reduce 58
	SEMICOLON  reduce 58
	RP  reduce 58


state 63
	aexp_term : aexp_factor .  (71)

	.  reduce 71


state 64
	aexp_term : aexp_term . TIMES aexp_factor  (69)
	aexp_term : aexp_term . DIVISION aexp_factor  (70)
	aexp : aexp_term .  (74)

	TIMES  shift 101
	DIVISION  shift 102
	THEN  reduce 74
	DO  reduce 74
	TO  reduce 74
	PLUS  reduce 74
	MINUS  reduce 74
	EQUAL  reduce 74
	LESSEQUAL  reduce 74
	LESS  reduce 74
	AND  reduce 74
	OR  reduce 74
	SEMICOLON  reduce 74
	COMMA  reduce 74
	RS  reduce 74
	RP  reduce 74
	GREATEREQUAL  reduce 74
	GREATER  reduce 74


state 65
	cmd : WHILE bexp . DO cmd  (33)
	bexp : bexp . OR bexp_term  (57)

	DO  shift 103
	OR  shift 99
	.  error


state 66
	cmd : REPEAT cmd . UNTIL bexp SEMICOLON  (34)

	UNTIL  shift 104
	.  error


state 67
	cmd : FOR ide . ASSIGN aexp TO aexp DO cmd  (35)

	ASSIGN  shift 105
	.  error


state 68
	aexp_factor : LP . aexp RP  (68)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 106
	aexp_factor  goto 63
	aexp_term  goto 64


state 69
	cmd : WRITE aexp . SEMICOLON  (36)
	aexp : aexp . PLUS aexp_term  (72)
	aexp : aexp . MINUS aexp_term  (73)

	PLUS  shift 91
	MINUS  shift 92
	SEMICOLON  shift 107
	.  error


state 70
	cmd : CALL ide . LP opt_aexp_list RP SEMICOLON  (37)

	LP  shift 108
	.  error


state 71
	program : PROGRAM opt_rec_list opt_dec_list opt_proc_list cmd EOF .  (1)

	.  reduce 1


state 72
	lexp : ide LS . aexp RS  (43)
	lexp : ide LS . aexp COMMA aexp RS  (44)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 109
	aexp_factor  goto 63
	aexp_term  goto 64


state 73
	lexp : ide DOT . lexp  (45)

	IDE  shift 9
	.  error

	ide  goto 36
	lexp  goto 110


state 74
	cmd : lexp ASSIGN . aexp SEMICOLON  (30)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 111
	aexp_factor  goto 63
	aexp_term  goto 64


state 75
	rec_ : RECORD ide BEGIN dec_list END SEMICOLON .  (10)

	.  reduce 10


state 76
	gType : ARRAY LS . NUM RS OF bType  (14)
	gType : ARRAY LS . NUM COMMA NUM RS OF bType  (15)

	NUM  shift 112
	.  error


state 77
	dec : VAR ide COLON gType SEMICOLON .  (11)

	.  reduce 11


state 78
	param : ide . COLON bType  (28)

	COLON  shift 113
	.  error


state 79
	proc : PROCEDURE ide LP opt_param_list . RP opt_dec_list cmd  (22)

	RP  shift 114
	.  error


state 80
	opt_param_list : param_list .  (25)

	.  reduce 25


state 81
	param_list : param .  (26)
	param_list : param . COMMA param_list  (27)

	COMMA  shift 115
	RP  reduce 26


state 82
	proc : FUNCTION ide LP opt_param_list . RP COLON ret opt_dec_list cmd  (23)

	RP  shift 116
	.  error


state 83
	cmd_list : cmd cmd_list .  (41)

	.  reduce 41


state 84
	cmd : BEGIN opt_cmd_list END . SEMICOLON  (31)

	SEMICOLON  shift 117
	.  error


state 85
	aexp_factor : CALL ide . LP opt_aexp_list RP  (67)

	LP  shift 118
	.  error


state 86
	bexp_factor : NOT bexp_factor .  (53)

	.  reduce 53


state 87
	bexp_factor : aexp . EQUAL aexp  (48)
	bexp_factor : aexp . LESSEQUAL aexp  (49)
	bexp_factor : aexp . LESS aexp  (50)
	bexp_factor : aexp . GREATEREQUAL aexp  (51)
	bexp_factor : aexp . GREATER aexp  (52)
	aexp_factor : LP aexp . RP  (68)
	aexp : aexp . PLUS aexp_term  (72)
	aexp : aexp . MINUS aexp_term  (73)

	PLUS  shift 91
	MINUS  shift 92
	EQUAL  shift 93
	LESSEQUAL  shift 94
	LESS  shift 95
	RP  shift 119
	GREATEREQUAL  shift 96
	GREATER  shift 97
	.  error


state 88
	bexp_factor : LP bexp . RP  (54)
	bexp : bexp . OR bexp_term  (57)

	OR  shift 99
	RP  shift 120
	.  error


state 89
	aexp_factor : ide LS . aexp RS  (62)
	aexp_factor : ide LS . aexp COMMA aexp RS  (63)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 121
	aexp_factor  goto 63
	aexp_term  goto 64


state 90
	aexp_factor : ide DOT . ide  (64)
	aexp_factor : ide DOT . ide LS aexp RS  (65)
	aexp_factor : ide DOT . ide LS aexp COMMA aexp RS  (66)

	IDE  shift 9
	.  error

	ide  goto 122


state 91
	aexp : aexp PLUS . aexp_term  (72)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp_factor  goto 63
	aexp_term  goto 123


state 92
	aexp : aexp MINUS . aexp_term  (73)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp_factor  goto 63
	aexp_term  goto 124


state 93
	bexp_factor : aexp EQUAL . aexp  (48)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 125
	aexp_factor  goto 63
	aexp_term  goto 64


state 94
	bexp_factor : aexp LESSEQUAL . aexp  (49)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 126
	aexp_factor  goto 63
	aexp_term  goto 64


state 95
	bexp_factor : aexp LESS . aexp  (50)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 127
	aexp_factor  goto 63
	aexp_term  goto 64


state 96
	bexp_factor : aexp GREATEREQUAL . aexp  (51)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 128
	aexp_factor  goto 63
	aexp_term  goto 64


state 97
	bexp_factor : aexp GREATER . aexp  (52)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 129
	aexp_factor  goto 63
	aexp_term  goto 64


state 98
	cmd : IF bexp THEN . cmd ELSE cmd  (32)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	.  error

	cmd  goto 130
	ide  goto 36
	lexp  goto 37


state 99
	bexp : bexp OR . bexp_term  (57)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp_factor  goto 61
	bexp_term  goto 131
	aexp_factor  goto 63
	aexp_term  goto 64


state 100
	bexp_term : bexp_term AND . bexp_factor  (55)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp_factor  goto 132
	aexp_factor  goto 63
	aexp_term  goto 64


state 101
	aexp_term : aexp_term TIMES . aexp_factor  (69)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp_factor  goto 133


state 102
	aexp_term : aexp_term DIVISION . aexp_factor  (70)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp_factor  goto 134


state 103
	cmd : WHILE bexp DO . cmd  (33)

	IDE  shift 9
	BEGIN  shift 28
	IF  shift 29
	WHILE  shift 30
	REPEAT  shift 31
	FOR  shift 32
	WRITE  shift 33
	CALL  shift 34
	.  error

	cmd  goto 135
	ide  goto 36
	lexp  goto 37


state 104
	cmd : REPEAT cmd UNTIL . bexp SEMICOLON  (34)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	TRUE  shift 53
	FALSE  shift 54
	CALL  shift 55
	NOT  shift 56
	LP  shift 57
	.  error

	ide  goto 58
	aexp  goto 59
	bexp  goto 136
	bexp_factor  goto 61
	bexp_term  goto 62
	aexp_factor  goto 63
	aexp_term  goto 64


state 105
	cmd : FOR ide ASSIGN . aexp TO aexp DO cmd  (35)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	.  error

	ide  goto 58
	aexp  goto 137
	aexp_factor  goto 63
	aexp_term  goto 64


state 106
	aexp_factor : LP aexp . RP  (68)
	aexp : aexp . PLUS aexp_term  (72)
	aexp : aexp . MINUS aexp_term  (73)

	PLUS  shift 91
	MINUS  shift 92
	RP  shift 119
	.  error


state 107
	cmd : WRITE aexp SEMICOLON .  (36)

	.  reduce 36


state 108
	cmd : CALL ide LP . opt_aexp_list RP SEMICOLON  (37)
	opt_aexp_list : .  (75)

	IDE  shift 9
	NUM  shift 51
	REAL  shift 52
	CALL  shift 55
	LP  shift 68
	RP  reduce 75

	ide  goto 58
	aexp  goto 138
	opt_aexp_list  goto 139
	aexp_factor  goto 63
	aexp_term  goto 64
	aexp_list  goto 140


state 109
	lexp : ide LS aexp . RS  (43)
	lexp : ide LS aexp . COMMA aexp RS  (44)
	aexp : aexp . PLUS aexp_term  (72)
	aexp : aexp . MINUS aexp_term  (73)
